cmake_minimum_required(VERSION 3.6)
project(rover_workspace)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        build/abridge/catkin/catkin_generated/version/package.cmake
        build/abridge/catkin_generated/installspace/_setup_util.py
        build/abridge/catkin_generated/installspace/abridge.pc
        build/abridge/catkin_generated/installspace/abridgeConfig-version.cmake
        build/abridge/catkin_generated/installspace/abridgeConfig.cmake
        build/abridge/catkin_generated/installspace/env.sh
        build/abridge/catkin_generated/installspace/setup.bash
        build/abridge/catkin_generated/installspace/setup.sh
        build/abridge/catkin_generated/installspace/setup.zsh
        build/abridge/catkin_generated/stamps/abridge/_setup_util.py.stamp
        build/abridge/catkin_generated/stamps/abridge/interrogate_setup_dot_py.py.stamp
        build/abridge/catkin_generated/stamps/abridge/package.xml.stamp
        build/abridge/catkin_generated/stamps/abridge/pkg.pc.em.stamp
        build/abridge/catkin_generated/env_cached.sh
        build/abridge/catkin_generated/generate_cached_setup.py
        build/abridge/catkin_generated/ordered_paths.cmake
        build/abridge/catkin_generated/package.cmake
        build/abridge/catkin_generated/pkg.develspace.context.pc.py
        build/abridge/catkin_generated/pkg.installspace.context.pc.py
        build/abridge/catkin_generated/setup_cached.sh
        build/abridge/gtest/cmake_install.cmake
        build/abridge/gtest/CTestTestfile.cmake
        build/abridge/gtest/Makefile
        build/abridge/CATKIN_IGNORE
        build/abridge/cmake_install.cmake
        build/abridge/CMakeCache.txt
        build/abridge/CTestTestfile.cmake
        build/abridge/Makefile
        build/diagnostics/catkin/catkin_generated/version/package.cmake
        build/diagnostics/catkin_generated/installspace/_setup_util.py
        build/diagnostics/catkin_generated/installspace/diagnostics.pc
        build/diagnostics/catkin_generated/installspace/diagnosticsConfig-version.cmake
        build/diagnostics/catkin_generated/installspace/diagnosticsConfig.cmake
        build/diagnostics/catkin_generated/installspace/env.sh
        build/diagnostics/catkin_generated/installspace/setup.bash
        build/diagnostics/catkin_generated/installspace/setup.sh
        build/diagnostics/catkin_generated/installspace/setup.zsh
        build/diagnostics/catkin_generated/stamps/diagnostics/_setup_util.py.stamp
        build/diagnostics/catkin_generated/stamps/diagnostics/interrogate_setup_dot_py.py.stamp
        build/diagnostics/catkin_generated/stamps/diagnostics/package.xml.stamp
        build/diagnostics/catkin_generated/stamps/diagnostics/pkg.pc.em.stamp
        build/diagnostics/catkin_generated/env_cached.sh
        build/diagnostics/catkin_generated/generate_cached_setup.py
        build/diagnostics/catkin_generated/ordered_paths.cmake
        build/diagnostics/catkin_generated/package.cmake
        build/diagnostics/catkin_generated/pkg.develspace.context.pc.py
        build/diagnostics/catkin_generated/pkg.installspace.context.pc.py
        build/diagnostics/catkin_generated/setup_cached.sh
        build/diagnostics/gtest/cmake_install.cmake
        build/diagnostics/gtest/CTestTestfile.cmake
        build/diagnostics/gtest/Makefile
        build/diagnostics/CATKIN_IGNORE
        build/diagnostics/cmake_install.cmake
        build/diagnostics/CMakeCache.txt
        build/diagnostics/CTestTestfile.cmake
        build/diagnostics/Makefile
        build/gazebo_plugins/catkin/catkin_generated/version/package.cmake
        build/gazebo_plugins/catkin_generated/installspace/_setup_util.py
        build/gazebo_plugins/catkin_generated/installspace/env.sh
        build/gazebo_plugins/catkin_generated/installspace/gazebo_plugins.pc
        build/gazebo_plugins/catkin_generated/installspace/gazebo_pluginsConfig-version.cmake
        build/gazebo_plugins/catkin_generated/installspace/gazebo_pluginsConfig.cmake
        build/gazebo_plugins/catkin_generated/installspace/setup.bash
        build/gazebo_plugins/catkin_generated/installspace/setup.sh
        build/gazebo_plugins/catkin_generated/installspace/setup.zsh
        build/gazebo_plugins/catkin_generated/stamps/gazebo_plugins/_setup_util.py.stamp
        build/gazebo_plugins/catkin_generated/stamps/gazebo_plugins/interrogate_setup_dot_py.py.stamp
        build/gazebo_plugins/catkin_generated/stamps/gazebo_plugins/package.xml.stamp
        build/gazebo_plugins/catkin_generated/stamps/gazebo_plugins/pkg.pc.em.stamp
        build/gazebo_plugins/catkin_generated/env_cached.sh
        build/gazebo_plugins/catkin_generated/generate_cached_setup.py
        build/gazebo_plugins/catkin_generated/ordered_paths.cmake
        build/gazebo_plugins/catkin_generated/package.cmake
        build/gazebo_plugins/catkin_generated/pkg.develspace.context.pc.py
        build/gazebo_plugins/catkin_generated/pkg.installspace.context.pc.py
        build/gazebo_plugins/catkin_generated/setup_cached.sh
        build/gazebo_plugins/gtest/cmake_install.cmake
        build/gazebo_plugins/gtest/CTestTestfile.cmake
        build/gazebo_plugins/gtest/Makefile
        build/gazebo_plugins/CATKIN_IGNORE
        build/gazebo_plugins/cmake_install.cmake
        build/gazebo_plugins/CMakeCache.txt
        build/gazebo_plugins/CTestTestfile.cmake
        build/gazebo_plugins/Makefile
        build/mobility/catkin/catkin_generated/version/package.cmake
        build/mobility/catkin_generated/installspace/_setup_util.py
        build/mobility/catkin_generated/installspace/env.sh
        build/mobility/catkin_generated/installspace/mobility.pc
        build/mobility/catkin_generated/installspace/mobilityConfig-version.cmake
        build/mobility/catkin_generated/installspace/mobilityConfig.cmake
        build/mobility/catkin_generated/installspace/setup.bash
        build/mobility/catkin_generated/installspace/setup.sh
        build/mobility/catkin_generated/installspace/setup.zsh
        build/mobility/catkin_generated/stamps/mobility/_setup_util.py.stamp
        build/mobility/catkin_generated/stamps/mobility/interrogate_setup_dot_py.py.stamp
        build/mobility/catkin_generated/stamps/mobility/package.xml.stamp
        build/mobility/catkin_generated/stamps/mobility/pkg.pc.em.stamp
        build/mobility/catkin_generated/env_cached.sh
        build/mobility/catkin_generated/generate_cached_setup.py
        build/mobility/catkin_generated/ordered_paths.cmake
        build/mobility/catkin_generated/package.cmake
        build/mobility/catkin_generated/pkg.develspace.context.pc.py
        build/mobility/catkin_generated/pkg.installspace.context.pc.py
        build/mobility/catkin_generated/setup_cached.sh
        build/mobility/gtest/cmake_install.cmake
        build/mobility/gtest/CTestTestfile.cmake
        build/mobility/gtest/Makefile
        build/mobility/CATKIN_IGNORE
        build/mobility/cmake_install.cmake
        build/mobility/CMakeCache.txt
        build/mobility/CTestTestfile.cmake
        build/mobility/Makefile
        build/obstacle_detection/catkin/catkin_generated/version/package.cmake
        build/obstacle_detection/catkin_generated/installspace/_setup_util.py
        build/obstacle_detection/catkin_generated/installspace/env.sh
        build/obstacle_detection/catkin_generated/installspace/obstacle_detection.pc
        build/obstacle_detection/catkin_generated/installspace/obstacle_detectionConfig-version.cmake
        build/obstacle_detection/catkin_generated/installspace/obstacle_detectionConfig.cmake
        build/obstacle_detection/catkin_generated/installspace/setup.bash
        build/obstacle_detection/catkin_generated/installspace/setup.sh
        build/obstacle_detection/catkin_generated/installspace/setup.zsh
        build/obstacle_detection/catkin_generated/stamps/obstacle_detection/_setup_util.py.stamp
        build/obstacle_detection/catkin_generated/stamps/obstacle_detection/interrogate_setup_dot_py.py.stamp
        build/obstacle_detection/catkin_generated/stamps/obstacle_detection/package.xml.stamp
        build/obstacle_detection/catkin_generated/stamps/obstacle_detection/pkg.pc.em.stamp
        build/obstacle_detection/catkin_generated/env_cached.sh
        build/obstacle_detection/catkin_generated/generate_cached_setup.py
        build/obstacle_detection/catkin_generated/ordered_paths.cmake
        build/obstacle_detection/catkin_generated/package.cmake
        build/obstacle_detection/catkin_generated/pkg.develspace.context.pc.py
        build/obstacle_detection/catkin_generated/pkg.installspace.context.pc.py
        build/obstacle_detection/catkin_generated/setup_cached.sh
        build/obstacle_detection/gtest/cmake_install.cmake
        build/obstacle_detection/gtest/CTestTestfile.cmake
        build/obstacle_detection/gtest/Makefile
        build/obstacle_detection/CATKIN_IGNORE
        build/obstacle_detection/cmake_install.cmake
        build/obstacle_detection/CMakeCache.txt
        build/obstacle_detection/CTestTestfile.cmake
        build/obstacle_detection/Makefile
        build/rqt_rover_gui/catkin/catkin_generated/version/package.cmake
        build/rqt_rover_gui/catkin_generated/installspace/_setup_util.py
        build/rqt_rover_gui/catkin_generated/installspace/env.sh
        build/rqt_rover_gui/catkin_generated/installspace/rqt_rover_gui.pc
        build/rqt_rover_gui/catkin_generated/installspace/rqt_rover_guiConfig-version.cmake
        build/rqt_rover_gui/catkin_generated/installspace/rqt_rover_guiConfig.cmake
        build/rqt_rover_gui/catkin_generated/installspace/setup.bash
        build/rqt_rover_gui/catkin_generated/installspace/setup.sh
        build/rqt_rover_gui/catkin_generated/installspace/setup.zsh
        build/rqt_rover_gui/catkin_generated/stamps/rqt_rover_gui/_setup_util.py.stamp
        build/rqt_rover_gui/catkin_generated/stamps/rqt_rover_gui/interrogate_setup_dot_py.py.stamp
        build/rqt_rover_gui/catkin_generated/stamps/rqt_rover_gui/package.xml.stamp
        build/rqt_rover_gui/catkin_generated/stamps/rqt_rover_gui/pkg.pc.em.stamp
        build/rqt_rover_gui/catkin_generated/stamps/rqt_rover_gui/setup.py.stamp
        build/rqt_rover_gui/catkin_generated/env_cached.sh
        build/rqt_rover_gui/catkin_generated/generate_cached_setup.py
        build/rqt_rover_gui/catkin_generated/ordered_paths.cmake
        build/rqt_rover_gui/catkin_generated/package.cmake
        build/rqt_rover_gui/catkin_generated/pkg.develspace.context.pc.py
        build/rqt_rover_gui/catkin_generated/pkg.installspace.context.pc.py
        build/rqt_rover_gui/catkin_generated/python_distutils_install.sh
        build/rqt_rover_gui/catkin_generated/safe_execute_install.cmake
        build/rqt_rover_gui/catkin_generated/setup_cached.sh
        build/rqt_rover_gui/catkin_generated/setup_py_interrogation.cmake
        build/rqt_rover_gui/gtest/cmake_install.cmake
        build/rqt_rover_gui/gtest/CTestTestfile.cmake
        build/rqt_rover_gui/gtest/Makefile
        build/rqt_rover_gui/resources/resources.qrc.depends
        build/rqt_rover_gui/src/moc_CameraFrame.cxx
        build/rqt_rover_gui/src/moc_CameraFrame.cxx_parameters
        build/rqt_rover_gui/src/moc_GPSFrame.cxx
        build/rqt_rover_gui/src/moc_GPSFrame.cxx_parameters
        build/rqt_rover_gui/src/moc_IMUFrame.cxx
        build/rqt_rover_gui/src/moc_IMUFrame.cxx_parameters
        build/rqt_rover_gui/src/moc_JoystickGripperInterface.cxx
        build/rqt_rover_gui/src/moc_JoystickGripperInterface.cxx_parameters
        build/rqt_rover_gui/src/moc_MapFrame.cxx
        build/rqt_rover_gui/src/moc_MapFrame.cxx_parameters
        build/rqt_rover_gui/src/moc_rover_gui_plugin.cxx
        build/rqt_rover_gui/src/moc_rover_gui_plugin.cxx_parameters
        build/rqt_rover_gui/src/moc_USFrame.cxx
        build/rqt_rover_gui/src/moc_USFrame.cxx_parameters
        build/rqt_rover_gui/CATKIN_IGNORE
        build/rqt_rover_gui/cmake_install.cmake
        build/rqt_rover_gui/CMakeCache.txt
        build/rqt_rover_gui/CTestTestfile.cmake
        build/rqt_rover_gui/Makefile
        build/rqt_rover_gui/qrc_resources.cxx
        build/rqt_rover_gui/ui_rover_gui_plugin.h
        build/rqt_rover_gui/Version.cpp
        build/sbridge/catkin/catkin_generated/version/package.cmake
        build/sbridge/catkin_generated/installspace/_setup_util.py
        build/sbridge/catkin_generated/installspace/env.sh
        build/sbridge/catkin_generated/installspace/sbridge.pc
        build/sbridge/catkin_generated/installspace/sbridgeConfig-version.cmake
        build/sbridge/catkin_generated/installspace/sbridgeConfig.cmake
        build/sbridge/catkin_generated/installspace/setup.bash
        build/sbridge/catkin_generated/installspace/setup.sh
        build/sbridge/catkin_generated/installspace/setup.zsh
        build/sbridge/catkin_generated/stamps/sbridge/_setup_util.py.stamp
        build/sbridge/catkin_generated/stamps/sbridge/interrogate_setup_dot_py.py.stamp
        build/sbridge/catkin_generated/stamps/sbridge/package.xml.stamp
        build/sbridge/catkin_generated/stamps/sbridge/pkg.pc.em.stamp
        build/sbridge/catkin_generated/env_cached.sh
        build/sbridge/catkin_generated/generate_cached_setup.py
        build/sbridge/catkin_generated/ordered_paths.cmake
        build/sbridge/catkin_generated/package.cmake
        build/sbridge/catkin_generated/pkg.develspace.context.pc.py
        build/sbridge/catkin_generated/pkg.installspace.context.pc.py
        build/sbridge/catkin_generated/setup_cached.sh
        build/sbridge/gtest/cmake_install.cmake
        build/sbridge/gtest/CTestTestfile.cmake
        build/sbridge/gtest/Makefile
        build/sbridge/CATKIN_IGNORE
        build/sbridge/cmake_install.cmake
        build/sbridge/CMakeCache.txt
        build/sbridge/CTestTestfile.cmake
        build/sbridge/Makefile
        build/ublox_gps/catkin/catkin_generated/version/package.cmake
        build/ublox_gps/catkin_generated/installspace/_setup_util.py
        build/ublox_gps/catkin_generated/installspace/env.sh
        build/ublox_gps/catkin_generated/installspace/setup.bash
        build/ublox_gps/catkin_generated/installspace/setup.sh
        build/ublox_gps/catkin_generated/installspace/setup.zsh
        build/ublox_gps/catkin_generated/installspace/ublox_gps.pc
        build/ublox_gps/catkin_generated/installspace/ublox_gpsConfig-version.cmake
        build/ublox_gps/catkin_generated/installspace/ublox_gpsConfig.cmake
        build/ublox_gps/catkin_generated/stamps/ublox_gps/_setup_util.py.stamp
        build/ublox_gps/catkin_generated/stamps/ublox_gps/interrogate_setup_dot_py.py.stamp
        build/ublox_gps/catkin_generated/stamps/ublox_gps/package.xml.stamp
        build/ublox_gps/catkin_generated/stamps/ublox_gps/pkg.pc.em.stamp
        build/ublox_gps/catkin_generated/env_cached.sh
        build/ublox_gps/catkin_generated/generate_cached_setup.py
        build/ublox_gps/catkin_generated/ordered_paths.cmake
        build/ublox_gps/catkin_generated/package.cmake
        build/ublox_gps/catkin_generated/pkg.develspace.context.pc.py
        build/ublox_gps/catkin_generated/pkg.installspace.context.pc.py
        build/ublox_gps/catkin_generated/setup_cached.sh
        build/ublox_gps/gtest/cmake_install.cmake
        build/ublox_gps/gtest/CTestTestfile.cmake
        build/ublox_gps/gtest/Makefile
        build/ublox_gps/CATKIN_IGNORE
        build/ublox_gps/cmake_install.cmake
        build/ublox_gps/CMakeCache.txt
        build/ublox_gps/CTestTestfile.cmake
        build/ublox_gps/Makefile
        build/ublox_msgs/catkin/catkin_generated/version/package.cmake
        build/ublox_msgs/catkin_generated/installspace/_setup_util.py
        build/ublox_msgs/catkin_generated/installspace/env.sh
        build/ublox_msgs/catkin_generated/installspace/setup.bash
        build/ublox_msgs/catkin_generated/installspace/setup.sh
        build/ublox_msgs/catkin_generated/installspace/setup.zsh
        build/ublox_msgs/catkin_generated/installspace/ublox_msgs-msg-extras.cmake
        build/ublox_msgs/catkin_generated/installspace/ublox_msgs-msg-paths.cmake
        build/ublox_msgs/catkin_generated/installspace/ublox_msgs.pc
        build/ublox_msgs/catkin_generated/installspace/ublox_msgsConfig-version.cmake
        build/ublox_msgs/catkin_generated/installspace/ublox_msgsConfig.cmake
        build/ublox_msgs/catkin_generated/stamps/ublox_msgs/_setup_util.py.stamp
        build/ublox_msgs/catkin_generated/stamps/ublox_msgs/interrogate_setup_dot_py.py.stamp
        build/ublox_msgs/catkin_generated/stamps/ublox_msgs/package.xml.stamp
        build/ublox_msgs/catkin_generated/stamps/ublox_msgs/pkg-genmsg.cmake.em.stamp
        build/ublox_msgs/catkin_generated/stamps/ublox_msgs/pkg.pc.em.stamp
        build/ublox_msgs/catkin_generated/env_cached.sh
        build/ublox_msgs/catkin_generated/generate_cached_setup.py
        build/ublox_msgs/catkin_generated/ordered_paths.cmake
        build/ublox_msgs/catkin_generated/package.cmake
        build/ublox_msgs/catkin_generated/pkg.develspace.context.pc.py
        build/ublox_msgs/catkin_generated/pkg.installspace.context.pc.py
        build/ublox_msgs/catkin_generated/setup_cached.sh
        build/ublox_msgs/catkin_generated/ublox_msgs-msg-extras.cmake.develspace.in
        build/ublox_msgs/catkin_generated/ublox_msgs-msg-extras.cmake.installspace.in
        build/ublox_msgs/cmake/ublox_msgs-genmsg-context.py
        build/ublox_msgs/cmake/ublox_msgs-genmsg.cmake
        build/ublox_msgs/gtest/cmake_install.cmake
        build/ublox_msgs/gtest/CTestTestfile.cmake
        build/ublox_msgs/gtest/Makefile
        build/ublox_msgs/CATKIN_IGNORE
        build/ublox_msgs/cmake_install.cmake
        build/ublox_msgs/CMakeCache.txt
        build/ublox_msgs/CTestTestfile.cmake
        build/ublox_msgs/Makefile
        build/ublox_serialization/catkin/catkin_generated/version/package.cmake
        build/ublox_serialization/catkin_generated/installspace/_setup_util.py
        build/ublox_serialization/catkin_generated/installspace/env.sh
        build/ublox_serialization/catkin_generated/installspace/setup.bash
        build/ublox_serialization/catkin_generated/installspace/setup.sh
        build/ublox_serialization/catkin_generated/installspace/setup.zsh
        build/ublox_serialization/catkin_generated/installspace/ublox_serialization.pc
        build/ublox_serialization/catkin_generated/installspace/ublox_serializationConfig-version.cmake
        build/ublox_serialization/catkin_generated/installspace/ublox_serializationConfig.cmake
        build/ublox_serialization/catkin_generated/stamps/ublox_serialization/_setup_util.py.stamp
        build/ublox_serialization/catkin_generated/stamps/ublox_serialization/interrogate_setup_dot_py.py.stamp
        build/ublox_serialization/catkin_generated/stamps/ublox_serialization/package.xml.stamp
        build/ublox_serialization/catkin_generated/stamps/ublox_serialization/pkg.pc.em.stamp
        build/ublox_serialization/catkin_generated/env_cached.sh
        build/ublox_serialization/catkin_generated/generate_cached_setup.py
        build/ublox_serialization/catkin_generated/ordered_paths.cmake
        build/ublox_serialization/catkin_generated/package.cmake
        build/ublox_serialization/catkin_generated/pkg.develspace.context.pc.py
        build/ublox_serialization/catkin_generated/pkg.installspace.context.pc.py
        build/ublox_serialization/catkin_generated/setup_cached.sh
        build/ublox_serialization/gtest/cmake_install.cmake
        build/ublox_serialization/gtest/CTestTestfile.cmake
        build/ublox_serialization/gtest/Makefile
        build/ublox_serialization/CATKIN_IGNORE
        build/ublox_serialization/cmake_install.cmake
        build/ublox_serialization/CMakeCache.txt
        build/ublox_serialization/CTestTestfile.cmake
        build/ublox_serialization/Makefile
        camera_info/head_camera.yaml
        devel/etc/catkin/profile.d/06-ctr-nuke.sh
        devel/include/ublox_msgs/AidALM.h
        devel/include/ublox_msgs/AidEPH.h
        devel/include/ublox_msgs/AidHUI.h
        devel/include/ublox_msgs/CfgANT.h
        devel/include/ublox_msgs/CfgCFG.h
        devel/include/ublox_msgs/CfgGNSS.h
        devel/include/ublox_msgs/CfgMSG.h
        devel/include/ublox_msgs/CfgNAV5.h
        devel/include/ublox_msgs/CfgNAVX5.h
        devel/include/ublox_msgs/CfgPRT.h
        devel/include/ublox_msgs/CfgRATE.h
        devel/include/ublox_msgs/CfgSBAS.h
        devel/include/ublox_msgs/MonVER.h
        devel/include/ublox_msgs/NavCLOCK.h
        devel/include/ublox_msgs/NavDGPS.h
        devel/include/ublox_msgs/NavDGPS_SV.h
        devel/include/ublox_msgs/NavDOP.h
        devel/include/ublox_msgs/NavPOSECEF.h
        devel/include/ublox_msgs/NavPOSLLH.h
        devel/include/ublox_msgs/NavSBAS.h
        devel/include/ublox_msgs/NavSBAS_SV.h
        devel/include/ublox_msgs/NavSOL.h
        devel/include/ublox_msgs/NavSTATUS.h
        devel/include/ublox_msgs/NavSVINFO.h
        devel/include/ublox_msgs/NavSVINFO_SV.h
        devel/include/ublox_msgs/NavTIMEGPS.h
        devel/include/ublox_msgs/NavTIMEUTC.h
        devel/include/ublox_msgs/NavVELECEF.h
        devel/include/ublox_msgs/NavVELNED.h
        devel/include/ublox_msgs/RxmALM.h
        devel/include/ublox_msgs/RxmEPH.h
        devel/include/ublox_msgs/RxmRAW.h
        devel/include/ublox_msgs/RxmRAW_SV.h
        devel/include/ublox_msgs/RxmSFRB.h
        devel/include/ublox_msgs/RxmSVSI.h
        devel/include/ublox_msgs/RxmSVSI_SV.h
        devel/lib/abridge/abridge
        devel/lib/diagnostics/diagnostics
        devel/lib/mobility/mobility
        devel/lib/obstacle_detection/obstacle
        devel/lib/pkgconfig/abridge.pc
        devel/lib/pkgconfig/diagnostics.pc
        devel/lib/pkgconfig/gazebo_plugins.pc
        devel/lib/pkgconfig/mobility.pc
        devel/lib/pkgconfig/obstacle_detection.pc
        devel/lib/pkgconfig/rqt_rover_gui.pc
        devel/lib/pkgconfig/sbridge.pc
        devel/lib/pkgconfig/ublox_gps.pc
        devel/lib/pkgconfig/ublox_msgs.pc
        devel/lib/pkgconfig/ublox_serialization.pc
        devel/lib/python2.7/dist-packages/rqt_rover_gui/__init__.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/__init__.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_AidALM.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_AidEPH.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_AidHUI.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgANT.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgCFG.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgGNSS.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgMSG.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgNAV5.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgNAVX5.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgPRT.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgRATE.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_CfgSBAS.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_MonVER.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavCLOCK.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavDGPS.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavDGPS_SV.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavDOP.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavPOSECEF.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavPOSLLH.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavSBAS.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavSBAS_SV.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavSOL.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavSTATUS.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavSVINFO.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavSVINFO_SV.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavTIMEGPS.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavTIMEUTC.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavVELECEF.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_NavVELNED.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_RxmALM.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_RxmEPH.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_RxmRAW.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_RxmRAW_SV.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_RxmSFRB.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_RxmSVSI.py
        devel/lib/python2.7/dist-packages/ublox_msgs/msg/_RxmSVSI_SV.py
        devel/lib/python2.7/dist-packages/ublox_msgs/__init__.py
        devel/lib/sbridge/sbridge
        devel/lib/ublox_gps/ublox_gps
        devel/lib/libgazebo_plugins.so
        devel/lib/libgazebo_plugins_gripper.so
        devel/lib/libgazebo_plugins_score.so
        devel/lib/librqt_rover_gui.so
        devel/lib/libublox_gps.so
        devel/lib/libublox_msgs.so
        devel/share/abridge/cmake/abridgeConfig-version.cmake
        devel/share/abridge/cmake/abridgeConfig.cmake
        devel/share/common-lisp/ros/ublox_msgs/msg/_package.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_AidALM.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_AidEPH.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_AidHUI.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgANT.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgCFG.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgGNSS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgMSG.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgNAV5.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgNAVX5.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgPRT.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgRATE.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_CfgSBAS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_MonVER.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavCLOCK.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavDGPS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavDGPS_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavDOP.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavPOSECEF.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavPOSLLH.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavSBAS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavSBAS_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavSOL.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavSTATUS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavSVINFO.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavSVINFO_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavTIMEGPS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavTIMEUTC.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavVELECEF.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_NavVELNED.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_RxmALM.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_RxmEPH.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_RxmRAW.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_RxmRAW_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_RxmSFRB.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_RxmSVSI.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/_package_RxmSVSI_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/AidALM.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/AidEPH.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/AidHUI.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgANT.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgCFG.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgGNSS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgMSG.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgNAV5.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgNAVX5.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgPRT.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgRATE.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/CfgSBAS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/MonVER.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavCLOCK.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavDGPS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavDGPS_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavDOP.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavPOSECEF.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavPOSLLH.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavSBAS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavSBAS_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavSOL.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavSTATUS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavSVINFO.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavSVINFO_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavTIMEGPS.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavTIMEUTC.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavVELECEF.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/NavVELNED.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/RxmALM.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/RxmEPH.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/RxmRAW.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/RxmRAW_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/RxmSFRB.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/RxmSVSI.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/RxmSVSI_SV.lisp
        devel/share/common-lisp/ros/ublox_msgs/msg/ublox_msgs-msg.asd
        devel/share/diagnostics/cmake/diagnosticsConfig-version.cmake
        devel/share/diagnostics/cmake/diagnosticsConfig.cmake
        devel/share/gazebo_plugins/cmake/gazebo_pluginsConfig-version.cmake
        devel/share/gazebo_plugins/cmake/gazebo_pluginsConfig.cmake
        devel/share/mobility/cmake/mobilityConfig-version.cmake
        devel/share/mobility/cmake/mobilityConfig.cmake
        devel/share/obstacle_detection/cmake/obstacle_detectionConfig-version.cmake
        devel/share/obstacle_detection/cmake/obstacle_detectionConfig.cmake
        devel/share/rqt_rover_gui/cmake/rqt_rover_guiConfig-version.cmake
        devel/share/rqt_rover_gui/cmake/rqt_rover_guiConfig.cmake
        devel/share/sbridge/cmake/sbridgeConfig-version.cmake
        devel/share/sbridge/cmake/sbridgeConfig.cmake
        devel/share/ublox_gps/cmake/ublox_gpsConfig-version.cmake
        devel/share/ublox_gps/cmake/ublox_gpsConfig.cmake
        devel/share/ublox_msgs/cmake/ublox_msgs-msg-extras.cmake
        devel/share/ublox_msgs/cmake/ublox_msgs-msg-paths.cmake
        devel/share/ublox_msgs/cmake/ublox_msgsConfig-version.cmake
        devel/share/ublox_msgs/cmake/ublox_msgsConfig.cmake
        devel/share/ublox_serialization/cmake/ublox_serializationConfig-version.cmake
        devel/share/ublox_serialization/cmake/ublox_serializationConfig.cmake
        devel/_setup_util.py
        devel/env.sh
        devel/setup.bash
        devel/setup.sh
        devel/setup.zsh
        launch/swarmie.launch
        logs/abridge/build.cache-manifest.000.log
        logs/abridge/build.cache-manifest.log
        logs/abridge/build.cmake.000.log
        logs/abridge/build.cmake.log
        logs/abridge/build.ctr-nuke.000.log
        logs/abridge/build.ctr-nuke.log
        logs/abridge/build.loadenv.000.log
        logs/abridge/build.loadenv.log
        logs/abridge/build.make.000.log
        logs/abridge/build.make.log
        logs/abridge/build.mkdir.000.log
        logs/abridge/build.mkdir.001.log
        logs/abridge/build.mkdir.log
        logs/diagnostics/build.cache-manifest.000.log
        logs/diagnostics/build.cache-manifest.log
        logs/diagnostics/build.cmake.000.log
        logs/diagnostics/build.cmake.log
        logs/diagnostics/build.ctr-nuke.000.log
        logs/diagnostics/build.ctr-nuke.log
        logs/diagnostics/build.loadenv.000.log
        logs/diagnostics/build.loadenv.log
        logs/diagnostics/build.make.000.log
        logs/diagnostics/build.make.log
        logs/diagnostics/build.mkdir.000.log
        logs/diagnostics/build.mkdir.001.log
        logs/diagnostics/build.mkdir.log
        logs/gazebo_plugins/build.cache-manifest.000.log
        logs/gazebo_plugins/build.cache-manifest.log
        logs/gazebo_plugins/build.cmake.000.log
        logs/gazebo_plugins/build.cmake.log
        logs/gazebo_plugins/build.ctr-nuke.000.log
        logs/gazebo_plugins/build.ctr-nuke.log
        logs/gazebo_plugins/build.loadenv.000.log
        logs/gazebo_plugins/build.loadenv.log
        logs/gazebo_plugins/build.make.000.log
        logs/gazebo_plugins/build.make.log
        logs/gazebo_plugins/build.mkdir.000.log
        logs/gazebo_plugins/build.mkdir.001.log
        logs/gazebo_plugins/build.mkdir.log
        logs/mobility/build.cache-manifest.000.log
        logs/mobility/build.cache-manifest.log
        logs/mobility/build.cmake.000.log
        logs/mobility/build.cmake.log
        logs/mobility/build.ctr-nuke.000.log
        logs/mobility/build.ctr-nuke.log
        logs/mobility/build.loadenv.000.log
        logs/mobility/build.loadenv.log
        logs/mobility/build.make.000.log
        logs/mobility/build.make.log
        logs/mobility/build.mkdir.000.log
        logs/mobility/build.mkdir.001.log
        logs/mobility/build.mkdir.log
        logs/obstacle_detection/build.cache-manifest.000.log
        logs/obstacle_detection/build.cache-manifest.log
        logs/obstacle_detection/build.cmake.000.log
        logs/obstacle_detection/build.cmake.log
        logs/obstacle_detection/build.ctr-nuke.000.log
        logs/obstacle_detection/build.ctr-nuke.log
        logs/obstacle_detection/build.loadenv.000.log
        logs/obstacle_detection/build.loadenv.log
        logs/obstacle_detection/build.make.000.log
        logs/obstacle_detection/build.make.log
        logs/obstacle_detection/build.mkdir.000.log
        logs/obstacle_detection/build.mkdir.001.log
        logs/obstacle_detection/build.mkdir.log
        logs/rqt_rover_gui/build.cache-manifest.000.log
        logs/rqt_rover_gui/build.cache-manifest.log
        logs/rqt_rover_gui/build.cmake.000.log
        logs/rqt_rover_gui/build.cmake.log
        logs/rqt_rover_gui/build.ctr-nuke.000.log
        logs/rqt_rover_gui/build.ctr-nuke.log
        logs/rqt_rover_gui/build.loadenv.000.log
        logs/rqt_rover_gui/build.loadenv.log
        logs/rqt_rover_gui/build.make.000.log
        logs/rqt_rover_gui/build.make.log
        logs/rqt_rover_gui/build.mkdir.000.log
        logs/rqt_rover_gui/build.mkdir.001.log
        logs/rqt_rover_gui/build.mkdir.log
        logs/sbridge/build.cache-manifest.000.log
        logs/sbridge/build.cache-manifest.log
        logs/sbridge/build.cmake.000.log
        logs/sbridge/build.cmake.log
        logs/sbridge/build.ctr-nuke.000.log
        logs/sbridge/build.ctr-nuke.log
        logs/sbridge/build.loadenv.000.log
        logs/sbridge/build.loadenv.log
        logs/sbridge/build.make.000.log
        logs/sbridge/build.make.log
        logs/sbridge/build.mkdir.000.log
        logs/sbridge/build.mkdir.001.log
        logs/sbridge/build.mkdir.log
        logs/ublox_gps/build.cache-manifest.000.log
        logs/ublox_gps/build.cache-manifest.log
        logs/ublox_gps/build.cmake.000.log
        logs/ublox_gps/build.cmake.log
        logs/ublox_gps/build.ctr-nuke.000.log
        logs/ublox_gps/build.ctr-nuke.log
        logs/ublox_gps/build.loadenv.000.log
        logs/ublox_gps/build.loadenv.log
        logs/ublox_gps/build.make.000.log
        logs/ublox_gps/build.make.log
        logs/ublox_gps/build.mkdir.000.log
        logs/ublox_gps/build.mkdir.001.log
        logs/ublox_gps/build.mkdir.log
        logs/ublox_msgs/build.cache-manifest.000.log
        logs/ublox_msgs/build.cache-manifest.log
        logs/ublox_msgs/build.cmake.000.log
        logs/ublox_msgs/build.cmake.log
        logs/ublox_msgs/build.ctr-nuke.000.log
        logs/ublox_msgs/build.ctr-nuke.log
        logs/ublox_msgs/build.loadenv.000.log
        logs/ublox_msgs/build.loadenv.log
        logs/ublox_msgs/build.make.000.log
        logs/ublox_msgs/build.make.log
        logs/ublox_msgs/build.mkdir.000.log
        logs/ublox_msgs/build.mkdir.001.log
        logs/ublox_msgs/build.mkdir.log
        logs/ublox_serialization/build.cache-manifest.000.log
        logs/ublox_serialization/build.cache-manifest.log
        logs/ublox_serialization/build.cmake.000.log
        logs/ublox_serialization/build.cmake.log
        logs/ublox_serialization/build.ctr-nuke.000.log
        logs/ublox_serialization/build.ctr-nuke.log
        logs/ublox_serialization/build.loadenv.000.log
        logs/ublox_serialization/build.loadenv.log
        logs/ublox_serialization/build.make.000.log
        logs/ublox_serialization/build.make.log
        logs/ublox_serialization/build.mkdir.000.log
        logs/ublox_serialization/build.mkdir.001.log
        logs/ublox_serialization/build.mkdir.log
        misc/rover_onboard_node_launch.sh
        readmeImages/activeRovers.png
        readmeImages/buildSim.png
        readmeImages/guiFirstScreen.png
        readmeImages/roverSensorOutputs.png
        readmeImages/sensorDisplayTab.png
        readmeImages/simControlTab.png
        readmeImages/taskStatusTab.png
        simulation/launch/swarmathon.launch
        simulation/models/achilles/model.config
        simulation/models/achilles/model.sdf
        simulation/models/aeneas/model.config
        simulation/models/aeneas/model.sdf
        simulation/models/ajax/model.config
        simulation/models/ajax/model.sdf
        simulation/models/at0/materials/scripts/at0.material
        simulation/models/at0/materials/textures/atag-0.png
        simulation/models/at0/model.config
        simulation/models/at0/model.sdf
        simulation/models/barrier_final_round/model.config
        simulation/models/barrier_final_round/model.sdf
        simulation/models/barrier_prelim_round/model.config
        simulation/models/barrier_prelim_round/model.sdf
        simulation/models/carpark_ground_plane/model.config
        simulation/models/carpark_ground_plane/model.sdf
        simulation/models/cinder_block/model.config
        simulation/models/cinder_block/model.sdf
        simulation/models/collection_disk/materials/scripts/collection_disk.material
        simulation/models/collection_disk/materials/textures/collection_disk.pdf
        simulation/models/collection_disk/materials/textures/collection_disk.png
        simulation/models/collection_disk/model.config
        simulation/models/collection_disk/model.sdf
        simulation/models/concrete_ground_plane/model.config
        simulation/models/concrete_ground_plane/model.sdf
        simulation/models/diomedes/model.config
        simulation/models/diomedes/model.sdf
        simulation/models/hector/model.config
        simulation/models/hector/model.sdf
        simulation/models/mars_ground_plane/model.config
        simulation/models/mars_ground_plane/model.sdf
        simulation/models/media/materials/scripts/brick.material
        simulation/models/media/materials/scripts/carpark_ground_plane.material
        simulation/models/media/materials/scripts/collection_disk.material
        simulation/models/media/materials/scripts/concrete_ground_plane.material
        simulation/models/media/materials/scripts/mars_ground_plane.material
        simulation/models/media/materials/scripts/white.material
        simulation/models/media/materials/textures/asphalt.jpg
        simulation/models/media/materials/textures/carpark.jpg
        simulation/models/media/materials/textures/carpark.png
        simulation/models/media/materials/textures/carpark2.jpg
        simulation/models/media/materials/textures/collection_disk.png
        simulation/models/media/materials/textures/concrete.jpg
        simulation/models/media/materials/textures/concrete2.jpg
        simulation/models/media/materials/textures/concreteTile.jpg
        simulation/models/media/materials/textures/GravelImage.png
        simulation/models/media/materials/textures/ksc_carpark2.jpg
        simulation/models/media/materials/textures/ksc_carpark3.jpg
        simulation/models/media/materials/textures/white.png
        simulation/models/paris/model.config
        simulation/models/paris/model.sdf
        simulation/models/swarmie/meshes/Body.stl
        simulation/models/swarmie/meshes/CoverPlate.stl
        simulation/models/swarmie/meshes/GripperFingerLeft.stl
        simulation/models/swarmie/meshes/GripperFingerRight.stl
        simulation/models/swarmie/meshes/GripperWrist.stl
        simulation/models/swarmie/meshes/TireWheelLeft.stl
        simulation/models/swarmie/meshes/TireWheelRight.stl
        simulation/worlds/clustered_targets_example.world
        simulation/worlds/powerlaw_targets_example.world
        simulation/worlds/swarmathon.world
        simulation/worlds/uniform_targets_example.world
        src/abridge/include/usbSerial.h
        src/abridge/src/abridge.cpp
        src/abridge/src/usbSerial.cpp
        src/abridge/CMakeLists.txt
        src/abridge/package.xml
        src/diagnostics/src/Diagnostics.cpp
        src/diagnostics/src/Diagnostics.h
        src/diagnostics/src/driver.cpp
        src/diagnostics/src/WirelessDiags.cpp
        src/diagnostics/src/WirelessDiags.h
        src/diagnostics/CMakeLists.txt
        src/diagnostics/package.xml
        src/gazebo_plugins/src/GripperPlugin/GripperManager.cpp
        src/gazebo_plugins/src/GripperPlugin/GripperManager.h
        src/gazebo_plugins/src/GripperPlugin/GripperPlugin.cpp
        src/gazebo_plugins/src/GripperPlugin/GripperPlugin.h
        src/gazebo_plugins/src/GripperPlugin/PIDController.cpp
        src/gazebo_plugins/src/GripperPlugin/PIDController.h
        src/gazebo_plugins/src/GripperPlugin/README.md
        src/gazebo_plugins/src/ScorePlugin/README.md
        src/gazebo_plugins/src/ScorePlugin/ScorePlugin.cpp
        src/gazebo_plugins/src/ScorePlugin/ScorePlugin.h
        src/gazebo_plugins/src/SetupWorld.cpp
        src/gazebo_plugins/CMakeLists.txt
        src/gazebo_plugins/package.xml
        src/mobility/src/DropOffController.cpp
        src/mobility/src/DropOffController.h
        src/mobility/src/mobility.cpp
        src/mobility/src/PickUpController.cpp
        src/mobility/src/PickUpController.h
        src/mobility/src/SearchController.cpp
        src/mobility/src/SearchController.h
        src/mobility/CMakeLists.txt
        src/mobility/package.xml
        src/obstacle_detection/src/obstacle.cpp
        src/obstacle_detection/CMakeLists.txt
        src/obstacle_detection/package.xml
        src/rqt_rover_gui/launch/rover_gui.launch
        src/rqt_rover_gui/resources/images.jpeg
        src/rqt_rover_gui/resources/resources.qrc
        src/rqt_rover_gui/resources/rover.png
        src/rqt_rover_gui/resources/swarmathon-gui-icon.png
        src/rqt_rover_gui/scripts/rqt_rover_gui
        src/rqt_rover_gui/src/BWTabWidget.cpp
        src/rqt_rover_gui/src/BWTabWidget.h
        src/rqt_rover_gui/src/CameraFrame.cpp
        src/rqt_rover_gui/src/CameraFrame.h
        src/rqt_rover_gui/src/GazeboSimManager.cpp
        src/rqt_rover_gui/src/GazeboSimManager.h
        src/rqt_rover_gui/src/GPSFrame.cpp
        src/rqt_rover_gui/src/GPSFrame.h
        src/rqt_rover_gui/src/IMUFrame.cpp
        src/rqt_rover_gui/src/IMUFrame.h
        src/rqt_rover_gui/src/JoystickGripperInterface.cpp
        src/rqt_rover_gui/src/JoystickGripperInterface.h
        src/rqt_rover_gui/src/MapData.cpp
        src/rqt_rover_gui/src/MapData.h
        src/rqt_rover_gui/src/MapFrame.cpp
        src/rqt_rover_gui/src/MapFrame.h
        src/rqt_rover_gui/src/rover_gui_plugin.cpp
        src/rqt_rover_gui/src/rover_gui_plugin.h
        src/rqt_rover_gui/src/rover_gui_plugin.ui
        src/rqt_rover_gui/src/USFrame.cpp
        src/rqt_rover_gui/src/USFrame.h
        src/rqt_rover_gui/src/Version.cpp.in
        src/rqt_rover_gui/src/Version.h
        src/rqt_rover_gui/CMakeLists.txt
        src/rqt_rover_gui/package.xml
        src/rqt_rover_gui/plugin.xml
        src/rqt_rover_gui/setup.py
        src/sbridge/src/main.cpp
        src/sbridge/src/sbridge.cpp
        src/sbridge/src/sbridge.h
        src/sbridge/CMakeLists.txt
        src/sbridge/package.xml
        src/ublox/ublox/CMakeLists.txt
        src/ublox/ublox/package.xml
        src/ublox/ublox_gps/include/ublox_gps/async_worker.h
        src/ublox/ublox_gps/include/ublox_gps/callback.h
        src/ublox/ublox_gps/include/ublox_gps/gps.h
        src/ublox/ublox_gps/include/ublox_gps/worker.h
        src/ublox/ublox_gps/launch/ublox_gps.launch
        src/ublox/ublox_gps/src/gps.cpp
        src/ublox/ublox_gps/src/node.cpp
        src/ublox/ublox_gps/CMakeLists.txt
        src/ublox/ublox_gps/package.xml
        src/ublox/ublox_msgs/include/ublox/serialization/ublox_msgs.h
        src/ublox/ublox_msgs/include/ublox_msgs/ublox_msgs.h
        src/ublox/ublox_msgs/msg/AidALM.msg
        src/ublox/ublox_msgs/msg/AidEPH.msg
        src/ublox/ublox_msgs/msg/AidHUI.msg
        src/ublox/ublox_msgs/msg/CfgANT.msg
        src/ublox/ublox_msgs/msg/CfgCFG.msg
        src/ublox/ublox_msgs/msg/CfgGNSS.msg
        src/ublox/ublox_msgs/msg/CfgMSG.msg
        src/ublox/ublox_msgs/msg/CfgNAV5.msg
        src/ublox/ublox_msgs/msg/CfgNAVX5.msg
        src/ublox/ublox_msgs/msg/CfgPRT.msg
        src/ublox/ublox_msgs/msg/CfgRATE.msg
        src/ublox/ublox_msgs/msg/CfgSBAS.msg
        src/ublox/ublox_msgs/msg/MonVER.msg
        src/ublox/ublox_msgs/msg/NavCLOCK.msg
        src/ublox/ublox_msgs/msg/NavDGPS.msg
        src/ublox/ublox_msgs/msg/NavDGPS_SV.msg
        src/ublox/ublox_msgs/msg/NavDOP.msg
        src/ublox/ublox_msgs/msg/NavPOSECEF.msg
        src/ublox/ublox_msgs/msg/NavPOSLLH.msg
        src/ublox/ublox_msgs/msg/NavSBAS.msg
        src/ublox/ublox_msgs/msg/NavSBAS_SV.msg
        src/ublox/ublox_msgs/msg/NavSOL.msg
        src/ublox/ublox_msgs/msg/NavSTATUS.msg
        src/ublox/ublox_msgs/msg/NavSVINFO.msg
        src/ublox/ublox_msgs/msg/NavSVINFO_SV.msg
        src/ublox/ublox_msgs/msg/NavTIMEGPS.msg
        src/ublox/ublox_msgs/msg/NavTIMEUTC.msg
        src/ublox/ublox_msgs/msg/NavVELECEF.msg
        src/ublox/ublox_msgs/msg/NavVELNED.msg
        src/ublox/ublox_msgs/msg/RxmALM.msg
        src/ublox/ublox_msgs/msg/RxmEPH.msg
        src/ublox/ublox_msgs/msg/RxmRAW.msg
        src/ublox/ublox_msgs/msg/RxmRAW_SV.msg
        src/ublox/ublox_msgs/msg/RxmSFRB.msg
        src/ublox/ublox_msgs/msg/RxmSVSI.msg
        src/ublox/ublox_msgs/msg/RxmSVSI_SV.msg
        src/ublox/ublox_msgs/src/ublox_msgs.cpp
        src/ublox/ublox_msgs/CMakeLists.txt
        src/ublox/ublox_msgs/package.xml
        src/ublox/ublox_serialization/include/ublox/checksum.h
        src/ublox/ublox_serialization/include/ublox/serialization.h
        src/ublox/ublox_serialization/include/ublox/serialization_ros.h
        src/ublox/ublox_serialization/CMakeLists.txt
        src/ublox/ublox_serialization/package.xml
        src/ublox/README.md
        src/CMakeLists.txt
        cleanup.sh
        README.md
        run.sh)

add_executable(rover_workspace ${SOURCE_FILES})